# eat-api

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  all.json  all_ref.json  canteens.json  index.html  openapi.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: ci-cd.yml  ci.yml  publish.yml  publish_en.yml  swagger.yml
.run/: run pytest.run.xml
fmi-bistro/2019/: 47.json  48.json  49.json  50.json  51.json
fmi-bistro/2020/: 02.json
fmi-bistro/combined/: combined.json
ipp-bistro/: feed.xml
ipp-bistro/2020/: 10.json  12.json
ipp-bistro/combined/: combined.json
js/: app.js
mediziner-mensa/2019/: 47.json  48.json  49.json  50.json  51.json  52.json
mediziner-mensa/2020/: 10.json  11.json  12.json  18.json
mediziner-mensa/2021/: 15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json
mediziner-mensa/combined/: combined.json
mensa-arcisstr/2019/: 46.json  48.json  49.json  50.json  51.json
mensa-arcisstr/2020/: 02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  36.json  37.json  38.json  39.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  49.json  50.json  51.json  52.json
mensa-arcisstr/2021/: 02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  40.json  41.json  (+2 more)
mensa-arcisstr/combined/: combined.json
mensa-arcisstrasse/2019/: 47.json  48.json  49.json  51.json
mensa-arcisstrasse/2020/: 02.json  04.json  05.json
mensa-garching/2019/: 46.json  47.json  48.json  49.json  50.json  51.json
mensa-garching/2020/: 02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  36.json  37.json  38.json  39.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  49.json  50.json  51.json  52.json
mensa-garching/2021/: 02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  (+28 more)
resources/: labels.json  locations.json
scripts/: combine.py  generate_canteens.sh  parse.sh  parse_canteen_list.py  reformat.py
src/: canteens.json  cli.py  entities.py  enum_json_creator.py  main.py  menu_parser.py  openmensa.py  util.py
(+531 files in other folders)
